# CPP-Projects

./: .gitignore  LICENSE  README.md  WINDOWS_INSTALL.bat  WINDOWS_QUICKSTART.md  WORKFLOW_TEST.md  build_all.sh  create_sfml_project.sh  generate_clangd_configs.sh  open-cuda-wsl.ps1  open-wsl-cursor.bat  open-wsl-cursor.ps1  setup.sh  test_git_connection.txt  verify_setup.sh  windows_setup.ps1
CUDA-Based-MNIST/: .clangd  GETTING-STARTED.md  PROGRESS-TEMPLATE.md  README.md
CUDA-Based-MNIST/Phase-0-Cpp-Foundation/: AND_table.txt  AND_weights.txt  NAND_table.txt  NAND_weights.txt  NOR_table.txt  NOR_weights.txt  OR_table.txt  OR_weights.txt  README.md  Starter README.md  cpuMINST.cpp  cursor response.md  neuron  startTraining.sh
CUDA-Based-MNIST/Phase-1-Neural-Net-Math/: README.md  XOR_table.txt  XOR_weights.txt  cpuMINST_Phase1.cpp  neuron  startTraining.sh
CUDA-Based-MNIST/Phase-2-CPU-Neural-Net/: BINARY_WEIGHTS_README.md  CMakeLists.txt  MNIST_Phase2.cpp  Notes_Phase2.txt  README.md  mnist_loader  neuron  package-lock.json  startTraining.bat  startTraining.sh
CUDA-Based-MNIST/Phase-3-CUDA-Fundamentals/: CMakeLists.txt  CUDA-MNIST.cu  MNIST_Phase3.cu  MNIST_Phase3.exp  README.md  hello  hello.cu  matrixVectorMul  matrixVectorMul.cu  mnist_test  mnist_wsl  runApp.ps1  runApp.sh  runApp_wsl.sh  testReLU  testReLU.cu  threadIndexing.cu  vectorAdd  vectorAdd.cu
CUDA-Based-MNIST/Phase-4-GPU-Neural-Net/: CMakeLists.txt  MNIST_Phase4.cu  README.md  startTraining.sh
CUDA-Based-MNIST/Phase-5-Optimization/: CMakeLists.txt  MNIST_Phase5.cu  MNIST_Phase5_5.cu  PERFORMANCE_ANALYSIS.md  PERFORMANCE_NOTES.md  README.md  README_WEIGHTS.md  benchmark_comparison.py  generate_initial_weights.cpp  generate_weights.sh  load_weights.py  mnist_loader.py  pytorch_mnist.py  requirements.txt  startTraining.sh  tensorflow_mnist.py
CUDA-Based-MNIST/bryan-library/: cudaMachineLearning.cu  cudaMachineLearning.h  cudaMatrixMath.cu  cudaMatrixMath.h  fileParsing.cpp  fileParsing.h  machineLearning.cpp  machineLearning.h  matrixMath.cpp  matrixMath.h
Coding Interview Data Annotation/: .clangd  CMakeLists.txt  codingInterviewDataAnnotation.cpp  runApp.sh
Coding Interview Data Annotation/.cache/clangd/index/: codingInterviewDataAnnotation.cpp.ECF19AEF851AB5D7.idx
Context for Agents/: CHANGES_SUMMARY.md  index.md
Photo Viewer/: .gitignore  CMakeLists.txt  photoViewer.cpp  runApp.sh
Photo Viewer/.cache/clangd/index/: photoViewer.cpp.9EA7B36130F972C3.idx
Random Walk/: .clangd  CMakeLists.txt  randomWalk.cpp  runApp.sh
Random Walk/.cache/clangd/index/: randomWalk.cpp.AD2C22EAE340DF9F.idx
Tetris/: CMakeLists.txt  headerFiles.hpp  main2.cpp  runApp.sh  sandfalling.cpp  squareShape.cpp  tetris  tetris.cpp
Tetris/.cache/clangd/index/: headerFiles.hpp.2F3D50492E402F48.idx  main.cpp.900BF7668C26379E.idx  squareShape.cpp.39AA71A6D618596F.idx
_sfml/: CMakeLists.txt  SFML_DIR.txt
